# kyklos

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.en.md  README.ja.md  README.md  README.tw.md  README.zh-tw.md  build.rs  compile-musl.sh  firewall-man.sqlite3  first.sh  kyklos.sqlite3  prompt.md
backend/: Cargo.toml  build.rs  firewall-man.sqlite3  first.sh  kyklos.sqlite3
backend/src/: ai.rs  db.rs  main.rs  server.rs  shell.rs  system.rs
backend/src/apps/: mod.rs
backend/src/apps/apiman/: mod.rs
backend/src/apps/dbman/: mod.rs
backend/src/apps/settings/: mod.rs
backend/src/firewall/: mod.rs
backend/src/haproxy/: mod.rs
backend/src/iptables/: iptable.rs  mod.rs  table.rs
backend/src/juniper/: mod.rs
backend/src/logger/: mod.rs
backend/src/net/: mod.rs
backend/src/net/firewall/: mod.rs
backend/src/net/firewall/linux/: iptable.rs  table.rs
backend/src/net/firewall/macos/: mod.rs
backend/src/net/firewall/windows/: mod.rs
backend/src/net/haproxy/: mod.rs
backend/src/net/kyklos_ha/: mod.rs
backend/src/net/netplan/: mod.rs
backend/src/net/nginx/: mod.rs
backend/src/net/pcap/: mod.rs
backend/src/net/samba/: mod.rs
backend/src/net/sftp/: mod.rs
backend/src/net/snmp/: mod.rs
backend/src/pfctl/: mod.rs
backend/src/security/: mod.rs
backend/src/services/: oauth2_server.rs  reverse_proxy.rs
backend/src/services/memcache/: cmd.rs  lru.rs  parser.rs  server.rs  store.rs
backend/src/sys/: mod.rs  tools.rs
backend/src/tools/: mod.rs  pcap.rs
backend/src/utils/: mod.rs
backend/src/windows/: mod.rs
(+103 files in other folders)
