[package]
name = "mi-copa-iptables-man"
version = "0.1.0"
edition = "2021"
description = "iptables Web 管理平臺 - Rust 實作"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"
